--- a/frontend/src/app/tarefas/listar/listar-tarefa.component.html
+++ b/frontend/src/app/tarefas/listar/listar-tarefa.component.html
@@ -30,7 +30,7 @@
         <input type="checkbox" [value]="tarefa.id" [checked]="tarefa.concluida">
     </td>
     <td class="text-center" style="width: 100px;padding: 5px;">
-        <a 
+        <a [routerLink]="['/tarefas/editar/', tarefa.id]"
           title="Editar" alt="Editar"
           class="btn btn-sm btn-outline-info">
           <i class="fa-solid fa-pencil"></i> Editar
