Delete task implemented

--- a/frontend/src/app/tarefas/listar/listar-tarefa.component.html
+++ b/frontend/src/app/tarefas/listar/listar-tarefa.component.html
@@ -37,7 +37,8 @@
       </a>
     </td>
     <td class="text-center" style="width: 100px;padding: 5px;">
-      <a href="#" title="Remover" alt="Remover"           
+      <a  (click)="delete($event, tarefa)" 
+        href="#" title="Remover" alt="Remover"           
           class="btn btn-sm btn-outline-danger">
           <i class="fa-solid fa-trash"></i> Remover
       </a>
