--- a/frontend/src/app/tarefas/listar/listar-tarefa.component.html
+++ b/frontend/src/app/tarefas/listar/listar-tarefa.component.html
@@ -27,7 +27,8 @@
       {{tarefa.name}}
     </td>
     <td style="width: 70px" class="text-center">
-        <input type="checkbox" [value]="tarefa.id" [checked]="tarefa.concluida">
+        <input  type="checkbox" 
+                (click)="updateStatus(tarefa)" [value]="tarefa.id" [checked]="tarefa.concluida">
     </td>
     <td class="text-center" style="width: 100px;padding: 5px;">
         <a [routerLink]="['/tarefas/editar/', tarefa.id]"
